--- a/填报策略介绍.md
+++ b/填报策略介绍.md
@@ -5,10 +5,25 @@
 
 这里的划分原则纯粹为自己决定。原则是把录取分数较为接近的学校，划在一个档次。究竟多少分算接近，没有统一的规则。可以在运行模拟程序前，自行修改档次的划分。
 # 推荐填报学校
-程序根据每个考生（包括自己）的分数，生成推荐学校列表。学校按照公办和民办，分别列出三类学校：匹配，高段，低段：
+程序根据每个考生的分数，生成推荐学校列表。学校按照公办和民办，分别列出三类学校：匹配，高段，低段：
 
 **匹配学校**：找到与学生本次考分排名最接近的学校，查看该学校的投档等级。该等级的学校即为匹配学校；
 
 **高段学校**: 比匹配学校投档等级高1级的学校；
 
 **低段学校**: 比匹配学校投档等级低的学校，依次列出4个等级的学校。
+
+# 填报策略
+根据成都市的中考填报政策，考生可以在第二批次填报7个志愿。其中1，3，5，7志愿对应学校的统招名额，2，4，6志愿对应学校的调剂名额。填报时，这里采取1，2志愿填报同一个学校，3，4填报一个学校，5，6填报一个学校，7填报一个学校。因此一共需要填报四个档次的学校。
+
+依照上一步由程序推荐的三类学校，所有考生填报时的策略分为五个类型：
+
+**大众型**：1，2志愿选取匹配学校里的一个学校。3，4和5，6，以及7，依次在低段学校的每一段选填一个学校。所有填写学校均为公立学校；
+
+**进取型**: 当考生的排名和高段学校的录取位次相差不太远时，有一定比例考生会选择在1，2志愿选填一个高段学校。剩下志愿从匹配学校开始，依次填写不同档次的学校，和大众型类似。所有填写学校均为公立学校；
+
+**进取土豪型**: 和进取型的策略类似。在选取高段学校时，如果高段有民办学校，则1，2志愿填高段民办学校。如果高段没有民办，则1，2志愿和进取型填法一样，但在后继的志愿中，选填匹配或者低段学校里排名靠前的一个民办学校；
+
+**保守型**: 一部分比例的考生略过匹配学校，直接从低段学校开始填写。所有填写学校均为公立学校；
+
+**保守土豪型**：1，2志愿填一个低段公立学校。接下来依次填写三个档次的民办学校。
