--- a/填报策略介绍.md
+++ b/填报策略介绍.md
@@ -27,3 +27,5 @@
 **保守型**: 一部分比例的考生略过匹配学校，直接从低段学校开始填写。所有填写学校均为公立学校；
 
 **保守土豪型**：1，2志愿填一个低段公立学校。接下来依次填写三个档次的民办学校。
+# 策略有效性分析
+一个策略有效的原则为：如果考生越能在前面的志愿被录取，则越有效。通过程序里的“查看填报志愿策略分析结果”，可以查看每个策略的有效性。其中有效指数的计算方法为：若考生使用某一策略，并且在第一志愿被录取，则得7分。其他志愿录取依次得分减1。第七志愿录取得1分。总得分归一化为100，分数越高策略越有效。
